# twitter_b2bit

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: testing.yml
core/: jwt_authentication.py  settings.py  urls.py
nginx/: default.conf
posts/: api.py  models.py  serializers.py  urls.py
posts/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_post_image.py  0004_alter_post_image.py
tests/: conftest.py  test_authorization.py  test_post.py  test_user.py
user/: api.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py
user/migrations/: 0001_initial.py  0002_alter_profile_data_nascimento.py  0003_remove_profile_email.py  0004_rename_nome_profile_username.py  0005_rename_data_nascimento_profile_birth_date.py
